--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -206,15 +206,17 @@
                    <div class="home-right"> 
            
 			   <div class="home-exp"><br>
-       <p style=""><strong>View Daily Deals Via Our PWA App</strong></p>
+       <p style=""><strong>Discover Daily Deals Via Our Premium PWA App</strong></p>
 				       
 				       <h1><strong>Deals UpTo 80% Discounts</strong></h1>
-				    
-				      <h2>Deals Are Handpick By Our Deal-Editors From A List Of Supermarket & Stores In Jamaica & Displayed In Our App Daily.</h2>
 
-				    <h4> Spotted A Deal You Love? And Ready To Make A Purchase, Visit The Business Location To Claim It</h4>
+				<h2>   Our Expert Deal Editors Handpick The Best Offers Daily From Top Supermarkets And Stores Across Jamaica Exclusively Inside The App </h2>
 				     
-				   <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
+
+				    <h3> Spotted A Deal You Love? And Ready To Make A Purchase, Visit The Business Location To Claim It</h3>
+				     
+				   <!--  Deals Are Handpick By Our Deal-Editors From A List Of Supermarket & Stores In Jamaica & Displayed In Our App Daily.
+				   <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
 					
 				      
 				      <br>
