--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -389,4 +389,11 @@
 }
 
   </script>
-                </div> </div> </div> </div> </div></div></div>
+              </div>
+                </div>
+            </div>
+          </div>
+                </div>
+            </div>
+         </div>
+            </div>
