--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="EN">
+	
 <head>
   
 <meta charset="UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <meta name="generator" content="Jekyll 3.0">
+<meta name="robots" content="noindex,nofollow">
+<meta name="verify-admitad" content="7924401ab0" />
   
  {% if page.desc %}
 <meta itemprop="description" name="description" content="{{ page.desc | truncate: 160 }}" />
@@ -28,9 +34,9 @@
 {% endif %}
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:image" content="{{ site.url }}/img/{{ page.image }}" />
-<meta property="og:site_name" content="WatsApp TV">
-<meta property="article:publisher" content="http://www.facebook.com/joinwatsapp" />
-<meta property="article:author" content="https://www.facebook.com/joinwatsapp" />
+<meta property="og:site_name" content="Allpree.com™">
+<meta property="article:publisher" content="http://www.facebook.com/allpreedotcom" />
+<meta property="article:author" content="https://www.facebook.com/allpreedotcom" />
 <meta property="article:published_time" content="{{ page.date }}" />
 {% if page.desc %}<meta property="og:description" content="{{ page.desc }}">
 {% else %}<meta property="og:description" content="{{ site.description }}">{% endif %}
@@ -48,8 +54,8 @@
 {% else %}
 <meta name="twitter:description" content="{{ site.description }}">
 {% endif %}
-<meta name="twitter:site" content="@joinwatsapp" />
-<meta name="twitter:creator" content="@joinwatsapp">
+<meta name="twitter:site" content="@allpreedotcom" />
+<meta name="twitter:creator" content="@allpreedotcom">
 <meta name="twitter:card" content="summary">
   
   
@@ -74,7 +80,7 @@
 <!--   Adsense Script  -->
   
   
-  
+ <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> 
  <link href="//site-assets.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet"> 
  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.allpree.com/css/main.css">
@@ -84,4 +90,5 @@
   {% endif %}
   <link href="//fonts.googleapis.com/css?family=Space+Mono|Work+Sans:700" rel="stylesheet">
 
-</head>
+
+	
