--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -232,13 +232,10 @@
     </div>
   </div>
 
-   
+  
       <script>
    const sheetUrl = 'https://opensheet.elk.sh/1zm3qwBaxHXtFo3G78B3syL1yxhChcClQl-mNOOknS0w/deals';
-      
-     
-   
-
+  
     function openPopup({ image, name, original, discount, description }) {
   const originalPrice = parseFloat(original.replace(/,/g, '')) || 0;
   const discountPrice = parseFloat(discount.replace(/,/g, '')) || 0;
@@ -373,3 +370,4 @@
 
   </script>
            
+</div>
