--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,55 @@
 <footer>
-      <div class="row copyright">
-				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">&copy;&nbsp;<script>document.write(new Date().getFullYear());</script>&nbsp;Allpree Group Holding Ltd. All Rights Reserved.  Registered in Jamaica No.100654 &nbsp;&nbsp;
-							
-							<a href="https://tiktok.com/{{site.tiktok.username}}"><i class="fa-brands fa-tiktok"></i></a>
-				    <a href="https://twitter.com/{{site.twitter.username}}"><i class="fa-brands fa-twitter"></i></a>
-				    <a href="https://facebook.com/{{site.facebook.publisher}}"><i class="fa-brands fa-facebook"></i></a>
-				    <a href="https://instagram.com/{{site.instagram.username}}"><i class="fa-brands fa-instagram"></i></a>
-				    <a href="https://www.snapchat.com/add/{{site.snapchat.username}}"><i class="fa-brands fa-snapchat"></i></a> 
-							<a href="{{site.youtube}}"><i class="fa-brands fa-youtube"></i></a>
-							
-							<br><br>This project is not endorsed by, affiliated to, or sponsored by WhatsApp Inc. and their products in any way. We just use the WhatsApp platform to share good content.</small>
-						<!-- <small>GSTN: 29EVLPS9250Q1Z8</small> -->
-
-				    </p>
-
-
-						
-							    
-						
-
-				</div>
+<!-- 	 -->
+<div id="dvFooterWrap">
+			  <div>
+				<!-- <h1><img src="/img/ftrHeadlineImg.gif" alt=""> Legal Terms</h1>
+				<ul>
+				    <li><a id="ctl00_Footer71_hlsmd" href="/legal/social-media-disclosure.html"target="_blank" rel="nofollow">Social Media Disclosure</a></li>
+				    <li><a id="ctl00_Footer71_hlcn" href="/legal/copyright-notice.html"target="_blank" rel="nofollow">Copyright Notice</a></li>
+				    <li><a id="ctl00_Footer71_hld" href="/legal/disclaimer.html"target="_blank" rel="nofollow">Disclaimer</a></li>
+				    <li><a id="ctl00_Footer71_hlasp" href="/legal/anti-spam-policy.html"target="_blank" rel="nofollow">Anti-Spam Policy</a></li>
+				    <li><a id="ctl00_Footer71_hltc" href="/legal"target="_blank" rel="nofollow">Terms & Conditions</a></li>
+				    <li><a id="ctl00_Footer71_hlPrivacy" href="/legal/privacy-policy.html"target="_blank" rel="nofollow">Privacy Policy</a></li>
+                                    <li><a id="ctl00_Footer71_hlftc" href="/legal/ftc-compliance.html"target="_blank" rel="nofollow">FTC Compliance</a></li>
+				    <li><a id="ctl00_Footer71_hldmca"href="/legal/dmca-compliance.html"target="_blank" rel="nofollow">DMCA Compliance</a></li>
+				</ul> -->
 			</div>
-		
+			<div id="dvFeatured">
+				<!-- <h1><img src="/img/ftrHeadlineImg.gif" alt=""> Featured On:</h1>
+				<img src="/img/ftrFeatured.gif" alt="">
+				<p><img src="/img/authorize.png" alt="Authorize.net"> 
+            <img src="/img/bbb.png" alt="Better Business Bureau">
+            <img src="/img/verisign.png" alt="Verisign">
+            </p> -->
+			</div>
+			<div id="dvFtrConnect">
+			<!--	<h1><img src="/img/ftrHeadlineImg.gif" alt=""> Connect</h1>
+				<ul>
+					<li><a id="ctl00_Footer71_hlBlog" href="/blog/"><img src="/img/blog.gif" alt="Blog">Allpree Blog</a></li>
+					<li><a href="https://twitter.com/allpreedotcom" target="_blank"><img src="/img/twitter.png" alt="Twitter">Allpree Twitter</a></li>
+					<li><a href="http://www.facebook.com/allpreedotcom" target="_blank"><img src="/img/facebook_002.png" alt="Facebook">Allpree Facebook</a></li>
+					<li><a href="http://www.youtube.com/allpreedotcom" target="_blank"><img src="/img/youtube.png" alt="Youtube">Allpree YouTube</a></li>
+					<li><a href="mailto:allpreedotcom@gmail.com.com"><img src="/img/email_1.png" alt="Email">Email Support</a></li>
+				</ul> -->
+				
+                <p id="trust">
+                    
+                </p>
+                <div class="authorize">
+</div> 
+			</div> <br><br><br><br>
+			<p class="copyright"> <small>
+				Your Privacy is Guaranteed. We will never give, lease or sell your personal information. Period!<br>
+				&copy; Copyright 2024 - <script>document.write(new Date().getFullYear());</script>&nbsp;Allpree Group Holding Ltd. All Rights Reserved.   Registered in Jamaica No.100654
+				<br>This project is not endorsed by, affiliated to, or sponsored by GiftMe. and their products in any way. We just use the GiftMe platform to offer our service.
+			</small></p>
+		</div>
+
+
+
+
+
+	
+
+	
   </footer>
