--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -196,7 +196,7 @@
 				<h2>   Our Expert Deal Editors Handpick The Best Offers Daily From Top Supermarkets And Stores Across Jamaica Exclusively Inside The App </h2>
 				     
 
-				    <h3> Spotted A Deal You Love? And Ready To Make A Purchase, Visit The Business Location To Claim It</h3>
+				    <h3> Spotted A Deal You Love? And Want To Make A Purchase, Just Visit The Business Location To Claim It</h3>
 				     
 				   <!--  Deals Are Handpick By Our Deal-Editors From A List Of Supermarket & Stores In Jamaica & Displayed In Our App Daily.
 				   <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
