--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -198,13 +198,13 @@
 
 				    <h3> Spotted A Deal You Love? And Want To Make A Purchase, Just Visit The Business Location To Claim It</h3>
 				     
-				   <!--  Deals Are Handpick By Our Deal-Editors From A List Of Supermarket & Stores In Jamaica & Displayed In Our App Daily.
-				   <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
-					
+				  
+				  <h4>  All the Best Local Deals – In One Tap </h4>
+
 				      
 				      <br>
-                                           <H4>Have A Referral Code? </4>
-                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
+                                           <H4>Install Allpree </4>
+                              <a href="https://www.allpree.com/go" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Here To Save Every Day</button></a>  <!--  <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a> -->
                                
                             <br> <br>
     </div>
