--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -10,6 +10,13 @@
     max-width: 350px;
     margin: 0 auto;
     justify-content: center;
+
+	/* 💻 Only apply max-width on larger screens (desktop) */
+  @media (min-width: 768px) {
+    #deals-container {
+      max-width: 900px;
+      margin: 0 auto;
+	    
   }
     .countdown {
       text-align: center;
