--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -4,7 +4,7 @@
   gap: 12px;
   padding: 10px;
   font-family: Arial, sans-serif;
-  max-width: 80%; /* Default full width */
+  max-width: 450px; /* Default full width */
   margin: 0 auto;
   justify-content: center;
  
