--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -1,7 +1,7 @@
  <style>
   #deals-container {
   display: absolute;
-  max-height: 450px; /* Default full height */
+  max-height: auto; /* Default full height */
   gap: 12px;
   padding: 10px;
   font-family: Arial, sans-serif;
