--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -204,13 +204,13 @@
 				       
 				       <h1><strong>Deals UpTo 80% Discounts</strong></h1>
 
-				<h2>   Our Expert Deal Editors Handpick The Best Offers Daily From Top Supermarkets And Stores Across Jamaica Exclusively Inside The App </h2>
+				<h2>   Our Expert Deal Editors <strong>Handpick The Best Offers</strong> Daily From Top Supermarkets And Stores <strong>Across Jamaica Exclusively</strong> Inside The App </h2>
 				     
 
-				    <h3> Spotted A Deal You Love? And Want To Make A Purchase, Just Visit The Business Location To Claim It</h3>
+				    <h3> Spotted A Deal You Love? And Want To Make A Purchase, Just Visit Their Location To Claim It</h3>
 				     
 				  
-				  <h4>  All the Best Local Deals – In One Tap </h4>
+				  <h3>  All the Best Local Deals – In One App </h3>
 
 				      
 				      <br>
