--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -223,7 +223,7 @@
                             </div> 
  <div class="col-md-6">
                         <div class="home-left"><br><br>
-			<center>  Live Example From Our PWA App <b>Note:</b> Touch Screen Can Scroll Horizontally</center>    
+			<center> Simple Version Of Our Live Feed From Our PWA App <b>Note:</b> Touch Screen Can Scroll Horizontally</center>    
   <div id="deals-container">Loading deals...</div>
 
 
