--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,9 +39,19 @@
 </div> 
 			</div> <br><br><br><br>
 			<p class="copyright"> <small>
+
+                               <p>Your Privacy is Guaranteed. We will never give, lease, or sell your personal information. Period!<br>
+&copy; Copyright 2024 - <script>document.write(new Date().getFullYear());</script>&nbsp;Allpree Deals operates under the management of Allpree Group Holding Ltd. All Rights Reserved.<br>
+To access exclusive deals and earn rewards, install the Allpree app today!<br>
+By using our services, you agree to our <a href="/terms">Terms & Conditions</a> and <a href="/privacy">Privacy Policy</a>.
+</p>
+
+
+			<!--	
 				Your Privacy is Guaranteed. We will never give, lease or sell your personal information. Period!<br>
 				&copy; Copyright 2024 - <script>document.write(new Date().getFullYear());</script>&nbsp;Allpree Group Holding Ltd. All Rights Reserved.   Registered in Jamaica No.100654
 				<br>This project is not endorsed by, affiliated to, or sponsored by GiftMe. and their products in any way. We just use the GiftMe platform to offer our service.
+			-->
 			</small></p>
 		</div>
 
