--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -230,7 +230,7 @@
 				      
 				      <br>
                                            <H4>Install Allpree </4>
-                              <a href="https://www.allpree.com/go" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Here To Save Every Day</button></a>  <!--  <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a> -->
+                              <a href="https://www.allpree.com/install" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Here To Save Every Day</button></a>  <!--  <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a> -->
                                
                             <br> <br>
     </div>
