--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -260,6 +260,8 @@
 
   
       <script>
+	      let sheetUrls = [];
+	      
   /* const sheetUrl = 'https://opensheet.elk.sh/1zm3qwBaxHXtFo3G78B3syL1yxhChcClQl-mNOOknS0w/deals'; */
 
 	async function loadSheetUrls() { 
