--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -284,8 +284,7 @@ const sheetUrl = 'https://opensheet.elk.sh/1zm3qwBaxHXtFo3G78B3syL1yxhChcClQl-mN
     }
 
 
-	      
-    /* async function loadDeals() {
+ async function loadDeals() {
       const container = document.getElementById('deals-container');
       container.innerHTML = '';
 
@@ -368,7 +367,7 @@ const sheetUrl = 'https://opensheet.elk.sh/1zm3qwBaxHXtFo3G78B3syL1yxhChcClQl-mN
         console.error('Failed to load deals:', err);
         container.innerHTML = 'Failed to load deals. Please check the sheet URL.';
       }
-    } */
+    } 
 
     loadDeals();
  
